# cycling-analytics

./: .env.example  .gitignore  DOCKER.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  quickstart.bat  quickstart.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_import_batch_table.py  003_integrations_table.py  004_user_settings.py  005_activity_metrics.py  006_daily_fitness.py  007_strava_integration.py  008_threshold_management.py  009_rls_indexes.py  010_unit_system.py  011_theme_setting.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/app/models/: __init__.py  activity.py  activity_lap.py  activity_metrics.py  activity_stream.py  fitness_metrics.py  health_metric.py  import_batch.py  integration.py  threshold.py  user.py  user_settings.py
backend/app/routers/: activities.py  auth.py  health.py  imports.py  integrations.py  metrics.py  routes.py  settings.py  setup.py  streams.py  tasks.py  thresholds.py  users.py  webhooks.py
backend/app/schemas/: activity.py  auth.py  csv_import.py  fit_data.py  import_batch.py  integration.py  metrics.py  route.py  settings.py  setup.py  stream.py  task.py  threshold.py  user.py
backend/app/services/: batch_import_service.py  cache_service.py  compute_service.py  csv_import_service.py  fitness_service.py  garmin_service.py  import_service.py  power_analysis_service.py  power_curve_service.py  (+8 more)
backend/tests/: conftest.py  test_health.py
(+212 files in other folders)
